[package]
name = "anvil"
version = "0.1.0"
authors = ["ZippyMagician <zippymagician1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = { version = "1.12.0", default-features = false, features = [ "float" ] }
clap = "2.33.3"
lazy_static = "1.4"