[package]
name = "arn-language"
version = "1.0.0"
edition = "2018"
include = [
    "src/*.rs",
    "src/utils/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE"
]

authors = ["Joshua Barnett <zippymagician1@gmail.com>"]
description = "Rust parser for the Arn golfing language"
repository = "https://github.com/ZippyMagician/Arn"
readme = "README.md"
license = "Apache-2.0"

categories = [ "parser", "language", "code-golf", "arn" ]
keywords = [ "ast", "parser", "golfing", "language", "arn" ]

[[bin]]
name = "arn"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rug = { version = "1.12.0", default-features = false, features = [ "float" ] }
clap = "2.33.3"
lazy_static = "1.4"
rand = "0.8.3"
primal = "0.3"
radix_fmt = "1.0.0"
atty = "0.2.14"

[profile.release]
lto = true
panic = "abort"
